# II-vpn

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
android/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/iivpn/: MainActivity.kt  VpnService.kt
android/app/src/main/res/values/: strings.xml
android/src/main/: AndroidManifest.xml
android/src/main/java/com/iivpn/: MainActivity.kt  VpnService.kt
android/src/main/java/com/iivpn/ui/theme/: Color.kt  Theme.kt
android/src/main/res/values/: themes.xml
rust/: Cargo.toml
rust/src/: error.rs  lib.rs  rules.rs  sni.rs  tor.rs  vpn.rs
