[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Tor with rustls only (no openssl)
arti-client = { version = "0.40", default-features = false, features = ["rustls", "tokio", "pt-client"] }
tokio = { version = "1", features = ["rt", "net", "sync", "time", "macros"] }
once_cell = "1.19"

# SNI parsing
tls-parser = "0.12"
bytes = "1"

# Packet parsing (pure Rust)
pnet = "0.35"
etherparse = "0.13"

# JNI
jni = "0.21"
log = "0.4"
env_logger = "0.10"

# Async & concurrency
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization for SNI rules
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Filesystem
dirs = "5"
tempfile = "3"

# Network (for future SOCKS forwarding)
socket2 = "0.5"
