[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# SNI extraction and replacement

# Tor client
arti-client = { version = "0.40", default-features = false, features = ["tokio", "rustls", "pt-client"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"

# JNI
jni = "0.21"
log = "0.4"
env_logger = "0.10"

# Serialization for SNI rules
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Packet parsing for VPN
etherparse = "0.13"
bytes = "1"
